--- a/configs/warehouse/local_gru.yaml
+++ b/configs/warehouse/local_gru.yaml
@@ -3,10 +3,10 @@ parameters:
         # Common hyperparameters
         simulator: 'local'
         env: 'warehouse'
-        obs_size: 69
+        obs_size: 37
         rollout_steps: 8
         num_actions: 4
-        name: 'local_warehouse_iam'
+        name: 'warehouse'
         influence_model: 'nn'
         fully_connected: true
         num_fc_layers: 1
@@ -17,25 +17,29 @@ parameters:
         recurrent: true
         num_rec_units: 512
         seq_len: 8
-        num_workers: 8
+        num_workers: 2
         epsilon: 0.1
-        beta: 0.1
+        beta: 0.01
         render: False
         policy: 'GRUPolicy'
+        learning_agent_ids: [7, 9, 14, 16, 19, 21, 26, 29]
+        hidden_size: 256
+        hidden_size_2: 128
 
     influence:
         # Common hyperparameters
         seq_len: 100
+        recurrent: True
         episode_length: 100
-        data_path: '../influence/data/warehouse/'
-        lr: 1.0e-3
-        num_epochs: 500
+        data_path: './influence/data/warehouse/'
+        lr: 1.0e-4
+        num_epochs: 200
         batch_size: 32
         hidden_memory_size: 64
-        input_size: 69
-        output_size: 6
+        input_size: 37
+        output_size: 4
         n_sources: 4
-        checkpoint_path: '../influence/models/warehouse/model'
+        checkpoint_path: './influence/models/warehouse/model'
         aug_obs: False
         load_model: False
         curriculum: False
