--- a/configs/warehouse/local_gru.yaml
+++ b/configs/warehouse/local_gru.yaml
@@ -22,7 +22,7 @@ parameters:
         beta: 0.01
         render: False
         policy: 'GRUPolicy'
-        learning_agent_ids: [7, 9, 14, 16, 19, 21, 26, 29]
+        learning_agent_ids: [7, 8, 9, 10, 13, 14, 15, 16, 19, 20, 21, 22, 25, 26, 27, 28]
         hidden_size: 256
         hidden_size_2: 128
         influence_train_freq: 5.0e+5
