--- a/configs/warehouse/global_gru.yaml
+++ b/configs/warehouse/global_gru.yaml
@@ -21,6 +21,7 @@ parameters:
         beta: 0.01
         render: False
         policy: 'GRUPolicy'
-        learning_agent_ids: [7, 8, 9, 10, 13, 14, 15, 16, 19, 20, 21, 22, 25, 26, 27, 28]
+        # learning_agent_ids: [7, 8, 9, 10, 13, 14, 15, 16, 19, 20, 21, 22, 25, 26, 27, 28]
+        learning_agent_ids: [13, 14, 15, 16, 19, 20, 21, 22]
         hidden_size: 256
         hidden_size_2: 128
