--- a/configs/warehouse/local_gru.yaml
+++ b/configs/warehouse/local_gru.yaml
@@ -22,7 +22,8 @@ parameters:
         beta: 0.01
         render: False
         policy: 'GRUPolicy'
-        learning_agent_ids: [7, 8, 9, 10, 13, 14, 15, 16, 19, 20, 21, 22, 25, 26, 27, 28]
+        # learning_agent_ids: [7, 8, 9, 10, 13, 14, 15, 16, 19, 20, 21, 22, 25, 26, 27, 28]
+        learning_agent_ids: [13, 14, 15, 16, 19, 20, 21, 22]
         hidden_size: 256
         hidden_size_2: 128
         influence_train_freq: 5.0e+5
@@ -44,4 +45,4 @@ parameters:
         aug_obs: False
         load_model: False
         curriculum: False
-        dataset_size: 5.0e+4
+        dataset_size: 1.0e+4
