--- a/configs/traffic/local_gru.yaml
+++ b/configs/traffic/local_gru.yaml
@@ -2,11 +2,11 @@ parameters:
     main:
         # Common hyperparameters
         simulator: 'local'
-        env: 'warehouse'
-        obs_size: 37
-        rollout_steps: 8
-        num_actions: 4
-        name: 'warehouse'
+        env: 'traffic'
+        obs_size: 40
+        rollout_steps: 64
+        num_actions: 2
+        name: 'traffic'
         influence_model: 'nn'
         fully_connected: true
         num_fc_layers: 1
@@ -17,31 +17,29 @@ parameters:
         recurrent: true
         num_rec_units: 512
         seq_len: 8
-        num_workers: 2
         epsilon: 0.1
         beta: 0.01
         render: False
         policy: 'GRUPolicy'
-        # learning_agent_ids: [7, 8, 9, 10, 13, 14, 15, 16, 19, 20, 21, 22, 25, 26, 27, 28]
-        learning_agent_ids: [13, 14] #, 15, 16, 19, 20, 21, 22]
+        learning_agent_ids: [6, 7, 8, 11, 13, 16, 17, 18]
         hidden_size: 256
         hidden_size_2: 128
         influence_train_freq: 5.0e+5
 
     influence:
         # Common hyperparameters
-        seq_len: 100
+        seq_len: 300
         recurrent: True
-        episode_length: 100
-        data_path: './influence/data/warehouse/'
+        episode_length: 300
+        data_path: './influence/data/traffic/'
         lr: 1.0e-4
-        num_epochs: 200
-        batch_size: 32
+        num_epochs: 300
+        batch_size: 4
         hidden_memory_size: 64
-        input_size: 37
-        output_size: 4
+        input_size: 40
+        output_size: 1
         n_sources: 4
-        checkpoint_path: './influence/models/warehouse/model'
+        checkpoint_path: './influence/models/traffic/model'
         aug_obs: False
         load_model: False
         curriculum: False
