--- a/configs/traffic/local_gru.yaml
+++ b/configs/traffic/local_gru.yaml
@@ -21,10 +21,10 @@ parameters:
         beta: 0.01
         render: False
         policy: 'GRUPolicy'
-        learning_agent_ids: [6, 7, 8, 11, 12, 13, 16, 17, 18]
+        learning_agent_ids: [6, 18] #7, 8, 11, 12, 13, 16, 17, 18]
         hidden_size: 256
         hidden_size_2: 128
-        influence_train_freq: 1.0e+5
+        influence_train_freq: 1.0e+6
 
     influence:
         # Common hyperparameters
@@ -43,4 +43,4 @@ parameters:
         aug_obs: False
         load_model: False
         curriculum: False
-        dataset_size: 1.0e+4
+        dataset_size: 3.0e+3
