--- a/configs/traffic/global_gru.yaml
+++ b/configs/traffic/global_gru.yaml
@@ -24,3 +24,4 @@ parameters:
         learning_agent_ids: [6, 18] #7, 8, 11, 12, 13, 16, 17, 18]
         hidden_size: 256
         hidden_size_2: 128
+        influence_train_freq: 5.0e+10
