--- a/configs/traffic/local_gru.yaml
+++ b/configs/traffic/local_gru.yaml
@@ -16,11 +16,11 @@ parameters:
         # Recurrent module
         recurrent: true
         num_rec_units: 512
-        seq_len: 8
+        seq_len: 1
         epsilon: 0.1
         beta: 0.01
         render: False
-        policy: 'GRUPolicy'
+        policy: 'FNNPolicy'
         learning_agent_ids: [6, 18] #7, 8, 11, 12, 13, 16, 17, 18]
         hidden_size: 256
         hidden_size_2: 128
