--- a/configs/traffic/local_gru.yaml
+++ b/configs/traffic/local_gru.yaml
@@ -21,7 +21,7 @@ parameters:
         beta: 0.01
         render: False
         policy: 'FNNPolicy'
-        learning_agent_ids: [6, 7, 8, 11, 12, 13, 16, 17, 18]
+        learning_agent_ids: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
         hidden_size: 256
         hidden_size_2: 128
         influence_train_freq: 1.0e+4
