--- a/configs/traffic/local_gru.yaml
+++ b/configs/traffic/local_gru.yaml
@@ -22,9 +22,9 @@ parameters:
         render: False
         policy: 'FNNPolicy'
         # learning_agent_ids: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
-        learning_agent_ids: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48]
+        # learning_agent_ids: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48]
         # learning_agent_ids: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
-        # learning_agent_ids: [48, 1]
+        learning_agent_ids: [48, 1]
         hidden_size: 256
         hidden_size_2: 128
         influence_train_freq: 1.0e+5
@@ -36,7 +36,7 @@ parameters:
         episode_length: 300
         data_path: './influence/data/traffic/'
         lr: 1.0e-4
-        num_epochs: 500
+        num_epochs: 700
         batch_size: 1200
         hidden_memory_size: 128
         input_size: 36
