--- a/configs/traffic/local_gru.yaml
+++ b/configs/traffic/local_gru.yaml
@@ -4,7 +4,7 @@ parameters:
         simulator: 'distributed'
         env: 'traffic'
         obs_size: 40
-        rollout_steps: 64
+        rollout_steps: 10
         num_actions: 2
         name: 'traffic'
         influence_model: 'nn'
@@ -27,6 +27,7 @@ parameters:
         hidden_size: 256
         hidden_size_2: 128
         influence_train_freq: 1.0e+5
+        memory_size: 100
 
     influence:
         # Common hyperparameters
