--- a/configs/traffic/local_gru.yaml
+++ b/configs/traffic/local_gru.yaml
@@ -36,8 +36,8 @@ parameters:
         episode_length: 300
         data_path: './influence/data/traffic/'
         lr: 1.0e-4
-        num_epochs: 700
-        batch_size: 1200
+        num_epochs: 50
+        batch_size: 120
         hidden_memory_size: 128
         input_size: 36
         output_size: 1
@@ -46,4 +46,4 @@ parameters:
         aug_obs: False
         load_model: False
         curriculum: False
-        dataset_size: 1.0e+4
+        dataset_size: 500
