--- a/configs/traffic/distributed.yaml
+++ b/configs/traffic/distributed.yaml
@@ -23,7 +23,7 @@ parameters:
         policy: 'FNNPolicy'
         # learning_agent_ids: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
         # learning_agent_ids: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48]
-        learning_agent_ids: [0, 1]
+        learning_agent_ids: [0, 1, 2, 3]
         # learning_agent_ids: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
         hidden_size: 256
         hidden_size_2: 128
@@ -36,7 +36,7 @@ parameters:
         episode_length: 300
         data_path: './influence/data/traffic/'
         lr: 1.0e-4
-        num_epochs: 50
+        num_epochs: 500
         batch_size: 120
         hidden_memory_size: 128
         input_size: 36
@@ -46,4 +46,4 @@ parameters:
         aug_obs: False
         load_model: False
         curriculum: False
-        dataset_size: 500
+        dataset_size: 1.0e+4
