--- a/configs/warehouse/distributed.yaml
+++ b/configs/warehouse/distributed.yaml
@@ -1,12 +1,13 @@
 parameters:
     main:
-         # Common hyperparameters
-        simulator: 'global'
+        # Common hyperparameters
+        simulator: 'distributed'
         env: 'warehouse'
         obs_size: 37
         rollout_steps: 8
         num_actions: 4
         name: 'warehouse'
+        influence_model: 'nn'
         fully_connected: true
         num_fc_layers: 1
         num_fc_units: [512]
@@ -16,7 +17,7 @@ parameters:
         recurrent: true
         num_rec_units: 512
         seq_len: 8
-        num_workers: 8
+        num_workers: 2
         epsilon: 0.1
         beta: 0.01
         render: False
@@ -27,3 +28,24 @@ parameters:
         # learning_agent_ids: [0,   1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12, 13,  14,  15,  16,  17,  18,  19,  20,  21,  22,  23,  24,  25, 26,  27,  28,  29,  30,  31,  32,  33,  34,  35,  36,  37,  38, 39,  40,  41,  42,  43,  44,  45,  46,  47,  48,  49,  50,  51, 52,  53,  54,  55,  56,  57,  58,  59,  60,  61,  62,  63,  64, 65,  66,  67,  68,  69,  70,  71,  72,  73,  74,  75,  76,  77, 78,  79,  80,  81,  82,  83,  84,  85,  86,  87,  88,  89,  90, 91,  92,  93,  94,  95,  96,  97,  98,  99]
         hidden_size: 256
         hidden_size_2: 128
+        influence_train_freq: 5.0e+5
+        untrained_influence: False
+
+    influence:
+        # Common hyperparameters
+        seq_len: 100
+        recurrent: True
+        episode_length: 100
+        data_path: './influence/data/warehouse/'
+        lr: 1.0e-4
+        num_epochs: 300
+        batch_size: 32
+        hidden_memory_size: 64
+        input_size: 37
+        output_size: 4
+        n_sources: 4
+        checkpoint_path: './influence/models/warehouse/model'
+        aug_obs: False
+        load_model: False
+        curriculum: False
+        dataset_size: 1.0e+4
