--- a/simulators/warehouse/warehouse/envs/configs/warehouse.yaml
+++ b/simulators/warehouse/warehouse/envs/configs/warehouse.yaml
@@ -1,12 +1,12 @@
 warehouse:
-  n_rows: 25 # n_robots_row*(domain_size-1) + 1
-  n_columns: 25 # n_robots_column*(domain_size-1) + 1
-  n_robots_row: 6
-  n_robots_column: 6
+  n_rows: 17 # n_robots_row*(domain_size-1) + 1
+  n_columns: 17 # n_robots_column*(domain_size-1) + 1
+  n_robots_row: 4
+  n_robots_column: 4
   distance_between_shelves: 4
   robot_domain_size: [5, 5]
   prob_item_appears: 0.02
   obs_type: 'image'
   n_steps_episode: 100
-  render: False
+  render: True
   render_delay: 0.5
