--- a/configs/warehouse/DIALS.yaml
+++ b/configs/warehouse/DIALS.yaml
@@ -1,7 +1,7 @@
 parameters:
     main:
         # Common hyperparameters
-        simulator: 'local'
+        simulator: 'distributed'
         env: 'warehouse'
         obs_size: 37
         rollout_steps: 8
@@ -22,11 +22,15 @@ parameters:
         beta: 0.01
         render: False
         policy: 'GRUPolicy'
-        # learning_agent_ids: [7, 8, 9, 10, 13, 14, 15, 16, 19, 20, 21, 22, 25, 26, 27, 28]
-        learning_agent_ids: [13, 14] #, 15, 16, 19, 20, 21, 22]
+        learning_agent_ids: [5, 6, 9, 10]
+        # learning_agent_ids: [8, 9, 10, 11, 12, 15, 16, 17, 18, 19, 22, 23, 24, 25, 26, 29, 30, 31, 32, 33, 36, 37, 38, 39, 40]
+        # learning_agent_ids: [10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 22, 23, 24, 25, 28, 29, 30, 31, 32, 33, 34, 37, 38, 39, 40, 41, 42, 43, 46, 47, 48, 49, 50, 51, 52, 55, 56, 57, 58, 59, 60, 61, 64, 65, 66, 67, 68, 69, 70]
+        # learning_agent_ids: [13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130]
         hidden_size: 256
         hidden_size_2: 128
         influence_train_freq: 5.0e+5
+        untrained_influence: False
+        eval_steps: 1.0e+3
 
     influence:
         # Common hyperparameters
@@ -35,7 +39,7 @@ parameters:
         episode_length: 100
         data_path: './influence/data/warehouse/'
         lr: 1.0e-4
-        num_epochs: 200
+        num_epochs: 300
         batch_size: 32
         hidden_memory_size: 64
         input_size: 37
