--- a/configs/warehouse/global.yaml
+++ b/configs/warehouse/global.yaml
@@ -1,13 +1,12 @@
 parameters:
     main:
-        # Common hyperparameters
-        simulator: 'distributed'
+         # Common hyperparameters
+        simulator: 'global'
         env: 'warehouse'
         obs_size: 37
         rollout_steps: 8
         num_actions: 4
         name: 'warehouse'
-        influence_model: 'nn'
         fully_connected: true
         num_fc_layers: 1
         num_fc_units: [512]
@@ -17,7 +16,7 @@ parameters:
         recurrent: true
         num_rec_units: 512
         seq_len: 8
-        num_workers: 2
+        num_workers: 8
         epsilon: 0.1
         beta: 0.01
         render: False
@@ -28,24 +27,4 @@ parameters:
         # learning_agent_ids: [13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130]
         hidden_size: 256
         hidden_size_2: 128
-        influence_train_freq: 5.0e+5
-        untrained_influence: False
-
-    influence:
-        # Common hyperparameters
-        seq_len: 100
-        recurrent: True
-        episode_length: 100
-        data_path: './influence/data/warehouse/'
-        lr: 1.0e-4
-        num_epochs: 300
-        batch_size: 32
-        hidden_memory_size: 64
-        input_size: 37
-        output_size: 4
-        n_sources: 4
-        checkpoint_path: './influence/models/warehouse/model'
-        aug_obs: False
-        load_model: False
-        curriculum: False
-        dataset_size: 1.0e+4
+        eval_steps: 5.0e+3
