--- a/simulators/warehouse/warehouse/envs/configs/warehouse.yaml
+++ b/simulators/warehouse/warehouse/envs/configs/warehouse.yaml
@@ -8,5 +8,5 @@ warehouse:
   prob_item_appears: 0.02
   obs_type: 'image'
   n_steps_episode: 100
-  render: True
+  render: False
   render_delay: 0.5
